--- a/Dokumentation/Dokumentation/99_anhang.tex
+++ b/Dokumentation/Dokumentation/99_anhang.tex
@@ -16,3 +16,29 @@
 \begin{center}
 \includegraphics[scale=0.50]{img/gantt_diagram.png}
 \end{center}
+
+\newpage
+
+\section*{Benutzernamen und Passwörter extrahieren}
+\label{app:Benutzernamen und Passwörter extrahieren}
+
+\lstinputlisting
+    [caption={Skript zur Extraktion von Benutzernamen und Passwörter aus Kippo-Logfile}
+       \label{lst:mitm_onmsg},
+       captionpos=b,language=bash,style=customccolor]
+ {listings/extract_userdata.sh}
+ 
+ 
+ 
+ \newpage
+ 
+\section*{Passwortstatistik}
+\label{app:Passwortstatistik}
+
+\lstinputlisting
+    [caption={Passwortstatistik generiert durch Pipal Password Analzyer}
+       \label{lst:mitm_onmsg},
+       captionpos=b,language={}]
+ {listings/pipal_statistik.txt}
+ 
+ \newpage 
