--- a/Dokumentation/Dokumentation/00_Dokumentation.tex
+++ b/Dokumentation/Dokumentation/00_Dokumentation.tex
@@ -85,6 +85,20 @@
   %commentstyle=\itshape\color{purple!40!black},
 }
 
+\lstdefinestyle{customccolor}{
+  belowcaptionskip=1\baselineskip,
+  breaklines=true,
+  frame=L,
+  xleftmargin=\parindent,
+  language=C,
+  showstringspaces=false,
+  basicstyle=\ttfamily,
+  keywordstyle=\color{blue}\ttfamily,
+  stringstyle=\color{red}\ttfamily,
+  commentstyle=\color{green}\ttfamily,
+  morecomment=[l][\color{magenta}]{\#}
+}
+
 \lstset{aboveskip=15pt,belowskip=15pt}
 
 
