--- a/Dokumentation/Dokumentation/09_fazit.tex
+++ b/Dokumentation/Dokumentation/09_fazit.tex
@@ -1,4 +1,14 @@
 \chapter{Fazit}
 \label{ch:Fazit}
 
-- abc
+- dieses Projekt hat uns deutlich gemacht, dass ein Server, der über das Internet erreichbar ist ein beliebtes Ziel ist\\
+- viele Verbindunge in kurzer zeit\\
+- innerhalb kürzester Zeit zig Angriffe auf den SSH-Honeypot\\
+- keine Standardpasswörter\\
+- Passwörter mit mindestens 8, besser 10 oder mehr Zeichen, sowie eine Kombination aus verschiedenen Zeichenklassen wie Groß- und Kleinbuchstaben, Zahlen und Sonderzeichen ist sicher.\\
+
+- webhoneypot fazit?\\
+
+- Honeypot ist mit fertigen Honeypot-Konfiguration schnell und einfach in eine bestehende Infrastruktur zu integrieren. Der daraus resultierende Wissensgewinn ist enorm wichtig, um eine Infrastruktur vor potentielle Angriffen abzusichern.\\
+
+- über Bash-Skripte lassen sich Vorgänge schnell und einfach automatisieren.\\
