Smaller changes to the first 3 chapters

--- a/Dokumentation/Dokumentation/00_abkuerzungsverzeichnis.tex
+++ b/Dokumentation/Dokumentation/00_abkuerzungsverzeichnis.tex
@@ -3,11 +3,11 @@
 \begin{acronym}[extNTFSaaa]
  \acro{DNS}{Domain Name System}
  \acro{FTP}{File Transfer Protocol}
- \acro{HIHP}{high-interaction honeypot}
+ \acro{HIHP}{High-interaction honeypot}
  \acro{HTTP}{Hypertext Transfer Protocol} 
- \acro{LIHP}{low-interaction honeypot}
+ \acro{LIHP}{Low-interaction honeypot}
  \acro{LTS}{Long Term Support}
- \acro{MIHP}{mediium-interaction honeypot}
+ \acro{MIHP}{Medium-interaction honeypot}
  \acro{SSH}{Secure Shell} 
  \acro{SQL}{Structured Query Language}
 
