--- a/Dokumentation/Dokumentation/01_einleitung.tex
+++ b/Dokumentation/Dokumentation/01_einleitung.tex
@@ -2,7 +2,7 @@
 \chapter{Einleitung}
 \label{ch:einleitung}
 
-Das Internet und die Digitalisierung, die in alle Lebensbereiche Einzug hält, verändern Gesellschaft, Wirtschaft und Kultur. Egal ob im privaten oder beruflichen Umfeld, ständig sind wir von Computern in Form von Arbeitsgeräten, Smartphones oder anderen Geräten umgeben. Diese Verbreitung sowie die Vernetzung von Geräten untereinander wird in den nächsten Jahren im Zuge der "`Internet-der-Dinge-Evolution"' weiter drastisch zunehmen.\\
+Das Internet und die Digitalisierung, die in alle Lebensbereiche Einzug hält, verändern Gesellschaft, Wirtschaft und Kultur. Egal ob im privaten oder beruflichen Umfeld, egal ob Arbeitsplatz-Computer, Smartphone oder Embedded System ständig sind wir von Computern umgeben. Die Verbreitung sowie die Vernetzung dieser Geräte untereinander wird in den nächsten Jahren im Zuge der "`Internet-der-Dinge-Evolution"' weiter drastisch zunehmen.\\
 
 
 Ein oft vernachlässigter Aspekt ist hierbei das Thema "`IT-Sicherheit"'. Keine Software ist frei von Fehlern und Sicherheitslücken. Falsch konfigurierte Dienste und Software, die nicht regelmäßig aktualisiert wird, sind ein leichtes Ziel für Angreifer. Durch die zunehmende Vernetzung wird das Thema IT-Sicherheit in Zukunft weiter an Bedeutung gewinnen.\\
@@ -42,14 +42,14 @@ Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokoll
 \section{Eigene Leistung}
 \label{sec:Eigene Leistung}
 
-Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstellung eines Honeypots, sowie die Integration desselben in eine für einen potentiellen Angreifer authentisch erscheinenden Umgebung. Dabei liegt das Hauptaugenmerk darauf, die Sicherheit des Systems zu gewährleisten. Die Dokumentation der Infrastruktur, der stattgefundener Angriffe sowie deren Auswertung stellen einen wichtigen Bestandteil dar. Dieses Wissen dient dem Projektteam zukünftig zur Absicherung von IT-Infrastruktur.
+Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstellung eines Honeypots, sowie die Integration desselben in eine für einen potentiellen Angreifer authentisch erscheinenden Umgebung. Dabei liegt das Hauptaugenmerk darauf, die Sicherheit des Systems zu gewährleisten. Die Dokumentation der Infrastruktur, von stattgefundenen Angriffen sowie deren Auswertung stellen einen weiteren wichtigen Bestandteil dar. Dieses Wissen dient dem Projektteam zukünftig zur Absicherung von IT-Infrastrukturen.
 
 \begin{itemize}
 \item Bereitstellung einer authentischen Umgebung für den Honeypot
-\item Gewährleistung der Sicherheit für das eigene und das globale Netz
 \item Inbetriebnahme des Honeypots selbst
-\item automatisierte Auswertung von Log-Files durch Skripte
-\item aus Auswertung erfolgt Erarbeitung und Ausweitung von Sicherheitsrichtlinien (Passwortrichtlinien, Firewallregeln)
-\item Dokumentation von Honeypot inklusive Umgebung, Angriffsphase und Ergebnisse
+\item Gewährleistung höchstmöglicher Sicherheit für das eigene und das globale Netz
+\item Automatisierte Auswertung von Log-Files durch Skripte
+\item Erarbeitung und Ausweitung von Sicherheitsrichtlinien durch Auswertung von Log-Files (Passwortrichtlinien, Firewallregeln)
+\item Dokumentation des Honeypots inklusive Umgebung, Angriffsphase und gesammelter Daten
 \end{itemize}
 
